<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/incomeTV"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_income" />

        <com.example.util.MyProgress
            android:id="@+id/chart_incomeBar"
            style="@style/progressBar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/expenditureTV"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_expenditure" />

        <com.example.util.MyProgress
            android:id="@+id/chart_expenditureBar"
            style="@style/progressBar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/balanceTV"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

        <com.example.util.MyProgress
            android:id="@+id/chart_budgetBar"
            style="@style/progressBar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/chart_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:gravity="center"
        android:text="TextView" />

</LinearLayout>