<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/budget_balance"
                style="@style/chart_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/general_budget" />

            <EditText
                android:id="@+id/budget_budget"
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.73"
                android:background="@null"
                android:ems="10"
                android:inputType="number"
                android:textStyle="bold"
                android:gravity="right|bottom"
                android:paddingRight="10dp"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView2"
                style="@style/chart_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:text="@string/avaiable" />

            <TextView
                android:id="@+id/budget_available"
                style="@style/chart_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/cd" />

            <TextView
                android:id="@+id/textView5"
                style="@style/chart_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:text="@string/used" />

            <TextView
                android:id="@+id/budget_used"
                style="@style/chart_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="TextView" />

        </LinearLayout>
<TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cd" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:text="TextView" />

        <include layout="@layout/ok_cancel" />
    </LinearLayout>

</LinearLayout>