<com.example.util.DragLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpic" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:paddingTop="50dp" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_bottom"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/clear" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/restore_software"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_bottom"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/scanning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/scanning"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll2"
             android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_bottom"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/iconf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/about"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
        

<!--         <ListView -->
<!--             android:id="@+id/lv" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_below="@id/ll1" -->
<!--             android:layout_marginBottom="30dp" -->
<!--             android:layout_marginTop="20dp" -->
<!--             android:cacheColorHint="#00000000" -->
<!--             android:divider="@null" -->
<!--             android:textColor="#ffffff" /> -->
    </RelativeLayout>

    <com.example.util.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:orientation="horizontal"
        android:background="#eeeeee" >

 <include layout="@layout/main" 
     android:layout_below="@+id/rl_title"
     android:layout_marginTop="5dp"/>
    </com.example.util.MyRelativeLayout>

</com.example.util.DragLayout>