<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/show_bg1"
        android:gravity="bottom"
        android:padding="5dp" >

        <TextView
            android:id="@+id/show_all_expenditure"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/show_budget_bar"
            android:text="￥00.00" />

        <ProgressBar
            android:id="@+id/show_budget_bar"
            style="@style/progressBar_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/show_budget"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:max="100" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/show_all_income"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/show_all_income"
            android:layout_marginTop="5dp"
            android:background="@color/cd" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/show_all_expenditure"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/show_all_expenditure"
            android:layout_marginTop="5dp"
            android:background="@color/cd" />

        <TextView
            android:id="@+id/show_all_income"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/show_all_expenditure"
            android:text="￥22.20" />

        <TextView
            android:id="@+id/textView3"
            style="@style/show_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/show_all_expenditure"
            android:layout_alignBottom="@+id/show_all_expenditure"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/zhichuzonge" />

        <TextView
            android:id="@+id/textView5"
            style="@style/show_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="5dp"
            android:text="@string/yusuanyue" />

        <TextView
            android:id="@+id/show_budget"
            style="@style/show_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignRight="@+id/show_all_expenditure"
            android:drawableRight="@drawable/arrow"
            android:gravity="right"
            android:hint="@string/set_budget"
             />

        <TextView
            android:id="@+id/textView1"
            style="@style/show_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/show_all_income"
            android:layout_alignBottom="@+id/show_all_income"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/shouruzonge" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.82"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/show_todayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/day" />

            <TextView
                android:id="@+id/textView6"
                style="@style/show_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/taday" />

            <TextView
                android:id="@+id/show_taday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:text="2015年01月12日" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
               />
<!--              android:src="@drawable/arrow"  -->

            <TextView
                android:id="@+id/show_taday_income"
                style="@style/income_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView2"
                android:text="￥22.20" />

            <TextView
                android:id="@+id/show_taday_expenditure"
                style="@style/expenditure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/show_taday"
                android:layout_alignBottom="@+id/show_taday"
                android:layout_alignRight="@+id/show_taday_income"
                android:text="￥00.00" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/cd" />

        <RelativeLayout
             android:id="@+id/show_weekLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/week" />

            <TextView
                android:id="@+id/textView6"
                style="@style/show_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/current_week" />

            <TextView
                android:id="@+id/show_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:text="01月11日-01月17日" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
            android:src="@drawable/arrow"
                 />

            <TextView
                android:id="@+id/show_week_income"
                style="@style/income_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView2"
                android:text="￥22.20" />

            <TextView
                android:id="@+id/show_week_expenditure"
                style="@style/expenditure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/show_week"
                android:layout_alignBottom="@+id/show_week"
                android:layout_alignRight="@+id/show_week_income"
                android:text="￥00.00" />

            <com.example.util.MyProgress
                android:id="@+id/show_week_budget"
                style="@style/progressBar_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                 android:layout_marginLeft="5dp"
                android:layout_above="@+id/show_week_expenditure"
                android:layout_alignRight="@+id/show_week"
                android:layout_toRightOf="@+id/textView6" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/cd" />

        <RelativeLayout
             android:id="@+id/show_monthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/month" />

            <TextView
                android:id="@+id/textView6"
                style="@style/show_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/current_month" />

            <TextView
                android:id="@+id/show_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:text="01月01日-01月31日" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow" />

            <TextView
                android:id="@+id/show_month_income"
                style="@style/income_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView2"
                android:text="￥22.20" />

            <TextView
                android:id="@+id/show_month_expenditure"
                style="@style/expenditure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/show_month"
                android:layout_alignBottom="@+id/show_month"
                android:layout_alignRight="@+id/show_month_income"
                android:text="￥00.00" />

            <com.example.util.MyProgress
                android:id="@+id/show_month_budget"
                style="@style/progressBar_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_marginLeft="5dp"
                android:layout_above="@+id/show_month_expenditure"
                android:layout_alignRight="@+id/show_month"
                android:layout_toRightOf="@+id/textView6" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>